--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-add-archive
-build-ca
-streamer
-zip-pool
-*~
-*.o
-*.cmi
-*.cmx
-
+/add-archive
+/build-ca
+/streamer
+/zip-pool
+/*~
+/*.o
+/*.cmi
+/*.cmx
+/.svn
